tests/script_errors/lexer_unterminated_heredoc/error.txt
Error: 
    1 | """
      | ^^^ It looks like you have characters tailing the here doc opening, it needs to be followed by a newline